feat: bind bookings router
